// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Link Default renders correctly 1`] = `
<a
  class="ecl-link ecl-link--default"
  href="/path"
>
  Default link
</a>
`;

exports[`EC - Link Standalone renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone"
  href="/path"
>
  Standalone link
</a>
`;

exports[`EC - Link With icon after renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
  href="/path"
>
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
   





            



  

  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
</a>
`;

exports[`EC - Link With icon before renders correctly 1`] = `
<a
  class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
  href="/path"
>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--fluid ecl-link__icon"
    focusable="false"
  >
    <use
      xlink:href="static/icons.svg#ui--external"
    />
  </svg>
   
  <span
    class="ecl-link__label"
  >
    Standalone link with icon
  </span>
</a>
`;
